Enhance training launcher with Colab support and dataset management functions

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -12,6 +12,61 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b672640d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import subprocess\n",
+    "from pathlib import Path\n",
+    "\n",
+    "REPO_URL = \"https://github.com/DeogenesMaranan/LIFD\"\n",
+    "COLAB_REPO_DIR = Path(\"/content/LIFD\")\n",
+    "\n",
+    "\n",
+    "def running_in_colab() -> bool:\n",
+    "    try:\n",
+    "        import google.colab  # type: ignore  # noqa: F401\n",
+    "        return True\n",
+    "    except ImportError:\n",
+    "        return False\n",
+    "\n",
+    "\n",
+    "USE_COLAB = running_in_colab()\n",
+    "\n",
+    "if USE_COLAB:\n",
+    "    if not COLAB_REPO_DIR.exists():\n",
+    "        print(f\"Cloning {REPO_URL} -> {COLAB_REPO_DIR}\")\n",
+    "        subprocess.run([\"git\", \"clone\", REPO_URL, str(COLAB_REPO_DIR)], check=True)\n",
+    "    else:\n",
+    "        print(f\"Repository already exists at {COLAB_REPO_DIR}\")\n",
+    "    os.chdir(COLAB_REPO_DIR)\n",
+    "    print(f\"Working directory set to {Path.cwd()}\")\n",
+    "else:\n",
+    "    print(\"Colab environment not detected; using current local working directory.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69922e94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DRIVE_BASE_DIR = \"/content/drive/MyDrive/LIFD\"\n",
+    "if USE_COLAB:\n",
+    "    try:\n",
+    "        from google.colab import drive\n",
+    "        drive.mount('/content/drive')\n",
+    "    except ModuleNotFoundError as exc:\n",
+    "        raise RuntimeError(\"google.colab is not available. Set USE_COLAB=False to bypass Drive mounting.\") from exc\n",
+    "else:\n",
+    "    DRIVE_BASE_DIR = \".\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "4710adc3",
    "metadata": {},
    "outputs": [],
@@ -23,14 +78,119 @@
     "from dataclasses import asdict\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
+    "import os\n",
+    "import shutil\n",
+    "from zipfile import ZipFile\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import torch\n",
     "\n",
     "try:\n",
     "    import pandas as pd\n",
     "except ImportError:\n",
     "    pd = None\n",
+    "\n",
+    "try:\n",
+    "    import requests\n",
+    "except ImportError:\n",
+    "    requests = None\n",
+    "\n",
+    "try:\n",
+    "    from huggingface_hub import hf_hub_download\n",
+    "except ImportError:\n",
+    "    hf_hub_download = None\n",
+    "\n",
+    "try:\n",
+    "    from google.colab import userdata\n",
+    "except ImportError:\n",
+    "    userdata = None\n",
+    "\n",
+    "torch.set_float32_matmul_precision(\"high\")\n",
+    "\n",
+    "CPU_COUNT = os.cpu_count() or 4\n",
+    "DATA_WORKERS = max(2, min(8, CPU_COUNT - 1))\n",
+    "GPU_AVAILABLE = torch.cuda.is_available()\n",
+    "TRAIN_BATCH_SIZE = 32 if GPU_AVAILABLE else 8\n",
+    "GRAD_ACCUM_STEPS = 1 if GPU_AVAILABLE else 2\n",
+    "PREFETCH_FACTOR = 4 if DATA_WORKERS > 0 else None\n",
+    "\n",
+    "BASE_PATH = Path(DRIVE_BASE_DIR)\n",
+    "if USE_COLAB:\n",
+    "    DATASET_ROOT = Path(\"/content/data/CASIA2\")\n",
+    "else:\n",
+    "    DATASET_ROOT = Path(\"prepared\") / \"CASIA2\"\n",
+    "\n",
+    "HF_REPO_ID = \"juhenes/image-forgery-detection\"\n",
+    "HF_FILE_NAME = \"CASIA2.zip\"\n",
+    "HF_FILE_URL = None\n",
+    "HF_TOKEN = userdata.get(\"HUGGINGFACE_TOKEN\") if userdata is not None else os.environ.get(\"HUGGINGFACE_TOKEN\")\n",
+    "\n",
+    "\n",
+    "def _download_hf_zip(dest_path: Path) -> Path:\n",
+    "    if HF_FILE_URL:\n",
+    "        if requests is None:\n",
+    "            raise RuntimeError(\"requests is required to download from HF_FILE_URL.\")\n",
+    "        headers = {\"Authorization\": f\"Bearer {HF_TOKEN}\"} if HF_TOKEN else None\n",
+    "        response = requests.get(HF_FILE_URL, stream=True, headers=headers)\n",
+    "        response.raise_for_status()\n",
+    "        with open(dest_path, \"wb\") as out_file:\n",
+    "            for chunk in response.iter_content(chunk_size=1 << 20):\n",
+    "                if chunk:\n",
+    "                    out_file.write(chunk)\n",
+    "        response.close()\n",
+    "        return dest_path\n",
+    "    if hf_hub_download is None:\n",
+    "        raise RuntimeError(\"huggingface_hub is required to download CASIA2.zip when HF_FILE_URL is not provided.\")\n",
+    "    return Path(\n",
+    "        hf_hub_download(\n",
+    "            repo_id=HF_REPO_ID,\n",
+    "            filename=HF_FILE_NAME,\n",
+    "            token=HF_TOKEN,\n",
+    "            repo_type=\"dataset\",\n",
+    "            force_download=False,\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "def _extract_zip_flat(zip_path: Path, destination: Path) -> None:\n",
+    "    with ZipFile(zip_path) as archive:\n",
+    "        for member in archive.infolist():\n",
+    "            member_path = Path(member.filename)\n",
+    "            if not member_path.parts:\n",
+    "                continue\n",
+    "            if member_path.parts[0] == \"__MACOSX\":\n",
+    "                continue\n",
+    "            relative_parts = member_path.parts[1:] if len(member_path.parts) > 1 else member_path.parts\n",
+    "            if not relative_parts:\n",
+    "                continue\n",
+    "            target_path = destination.joinpath(*relative_parts)\n",
+    "            if member.is_dir():\n",
+    "                target_path.mkdir(parents=True, exist_ok=True)\n",
+    "                continue\n",
+    "            target_path.parent.mkdir(parents=True, exist_ok=True)\n",
+    "            with archive.open(member) as src, open(target_path, \"wb\") as dst:\n",
+    "                shutil.copyfileobj(src, dst)\n",
+    "\n",
+    "\n",
+    "def ensure_dataset_ready() -> None:\n",
+    "    if not USE_COLAB:\n",
+    "        return\n",
+    "    DATASET_ROOT.parent.mkdir(parents=True, exist_ok=True)\n",
+    "    if DATASET_ROOT.exists() and any(DATASET_ROOT.iterdir()):\n",
+    "        print(f\"Dataset already available at {DATASET_ROOT}\")\n",
+    "        return\n",
+    "    zip_file_path = DATASET_ROOT.parent / HF_FILE_NAME\n",
+    "    downloaded_path = _download_hf_zip(zip_file_path)\n",
+    "    if downloaded_path != zip_file_path:\n",
+    "        shutil.copy(downloaded_path, zip_file_path)\n",
+    "        downloaded_path = zip_file_path\n",
+    "    DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
+    "    _extract_zip_flat(downloaded_path, DATASET_ROOT)\n",
+    "    print(f\"Dataset extracted to {DATASET_ROOT}\")\n",
+    "\n",
+    "\n",
+    "ensure_dataset_ready()\n",
     "\n",
     "from train import TrainConfig, run_training\n",
     "from model.hybrid_forgery_detector import HybridForgeryConfig\n",
@@ -64,17 +224,22 @@
    "outputs": [],
    "source": [
     "train_config = TrainConfig(\n",
-    "    prepared_root=\"prepared/CASIA2\",\n",
+    "    prepared_root=str(DATASET_ROOT),\n",
     "    train_split=\"train\",\n",
     "    val_split=\"val\",\n",
     "    target_size=128,\n",
-    "    batch_size=8,\n",
+    "    batch_size=TRAIN_BATCH_SIZE,\n",
     "    num_epochs=10,\n",
     "    learning_rate=1e-4,\n",
     "    weight_decay=1e-2,\n",
+    "    num_workers=DATA_WORKERS,\n",
+    "    prefetch_factor=PREFETCH_FACTOR,\n",
+    "    persistent_workers=DATA_WORKERS > 0,\n",
+    "    pin_memory=True,\n",
+    "    grad_accumulation_steps=GRAD_ACCUM_STEPS,\n",
     "    grad_clip_norm=1.0,\n",
     "    log_interval=10,\n",
-    "    checkpoint_dir=\"checkpoints\",\n",
+    "    checkpoint_dir=str(BASE_PATH / \"checkpoints\"),\n",
     "    checkpoint_interval=1,\n",
     "    save_best_only=True,\n",
     "    use_amp=True,\n",
@@ -130,7 +295,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ENABLE_DRY_RUN = False  # flip to True to quickly verify data -> model -> optimizer plumbing\n",
+    "ENABLE_DRY_RUN = False\n",
     "if ENABLE_DRY_RUN:\n",
     "    dry_run_config = deepcopy(train_config)\n",
     "    dry_run_config.num_epochs = 1\n",
@@ -177,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "checkpoint_path = Path(\"checkpoints/best.pt\")\n",
+    "checkpoint_path = Path(train_config.checkpoint_dir) / \"best.pt\"\n",
     "evaluation_split = \"test\"\n",
     "ablation_label = f\"{checkpoint_path.stem}\"\n",
     "eval_device = train_config.resolved_device()\n",
