Refactor training configuration for performance modes and adjust data loading parameters

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -109,11 +109,27 @@
     "torch.set_float32_matmul_precision(\"high\")\n",
     "\n",
     "CPU_COUNT = os.cpu_count() or 4\n",
-    "DATA_WORKERS = max(2, min(8, CPU_COUNT - 1))\n",
     "GPU_AVAILABLE = torch.cuda.is_available()\n",
-    "TRAIN_BATCH_SIZE = 32 if GPU_AVAILABLE else 8\n",
-    "GRAD_ACCUM_STEPS = 1 if GPU_AVAILABLE else 2\n",
-    "PREFETCH_FACTOR = 4 if DATA_WORKERS > 0 else None\n",
+    "PERFORMANCE_MODE = os.environ.get(\"LIFD_PERF_MODE\", \"fast\").lower()\n",
+    "if PERFORMANCE_MODE not in {\"fast\", \"balanced\", \"throughput\"}:\n",
+    "    PERFORMANCE_MODE = \"fast\"\n",
+    "\n",
+    "if PERFORMANCE_MODE == \"throughput\":\n",
+    "    DATA_WORKERS = max(4, min(8, CPU_COUNT - 1))\n",
+    "    TRAIN_BATCH_SIZE = 32 if GPU_AVAILABLE else 8\n",
+    "    GRAD_ACCUM_STEPS = 1\n",
+    "    PREFETCH_FACTOR = 6 if DATA_WORKERS > 0 else None\n",
+    "elif PERFORMANCE_MODE == \"balanced\":\n",
+    "    DATA_WORKERS = max(3, min(6, CPU_COUNT - 1))\n",
+    "    TRAIN_BATCH_SIZE = 24 if GPU_AVAILABLE else 8\n",
+    "    GRAD_ACCUM_STEPS = 1\n",
+    "    PREFETCH_FACTOR = 4 if DATA_WORKERS > 0 else None\n",
+    "else:  # fast / latency-friendly\n",
+    "    half_cpus = max(1, CPU_COUNT // 2)\n",
+    "    DATA_WORKERS = max(1, min(4, half_cpus))\n",
+    "    TRAIN_BATCH_SIZE = 16 if GPU_AVAILABLE else 8\n",
+    "    GRAD_ACCUM_STEPS = 1\n",
+    "    PREFETCH_FACTOR = 2 if DATA_WORKERS > 0 else None\n",
     "\n",
     "BASE_PATH = Path(DRIVE_BASE_DIR)\n",
     "if USE_COLAB:\n",
