--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "import os\n",
     "import subprocess\n",
+    "import shutil\n",
     "from pathlib import Path\n",
     "\n",
     "REPO_URL = \"https://github.com/DeogenesMaranan/LIFD\"\n",
@@ -26,7 +27,7 @@
     "\n",
     "def running_in_colab() -> bool:\n",
     "    try:\n",
-    "        import google.colab  # type: ignore  # noqa: F401\n",
+    "        import google.colab\n",
     "        return True\n",
     "    except ImportError:\n",
     "        return False\n",
@@ -35,11 +36,13 @@
     "USE_COLAB = running_in_colab()\n",
     "\n",
     "if USE_COLAB:\n",
-    "    if not COLAB_REPO_DIR.exists():\n",
-    "        print(f\"Cloning {REPO_URL} -> {COLAB_REPO_DIR}\")\n",
-    "        subprocess.run([\"git\", \"clone\", REPO_URL, str(COLAB_REPO_DIR)], check=True)\n",
-    "    else:\n",
-    "        print(f\"Repository already exists at {COLAB_REPO_DIR}\")\n",
+    "    if COLAB_REPO_DIR.exists():\n",
+    "        print(f\"Folder {COLAB_REPO_DIR} already exists. Deleting it...\")\n",
+    "        shutil.rmtree(COLAB_REPO_DIR)\n",
+    "\n",
+    "    print(f\"Cloning {REPO_URL} -> {COLAB_REPO_DIR}\")\n",
+    "    subprocess.run([\"git\", \"clone\", REPO_URL, str(COLAB_REPO_DIR)], check=True)\n",
+    "\n",
     "    os.chdir(COLAB_REPO_DIR)\n",
     "    print(f\"Working directory set to {Path.cwd()}\")\n",
     "else:\n",
@@ -71,9 +74,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "from copy import deepcopy\n",
     "from dataclasses import asdict\n",
     "from pathlib import Path\n",
@@ -106,30 +106,16 @@
     "except ImportError:\n",
     "    userdata = None\n",
     "\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "torch.set_float32_matmul_precision(\"high\")\n",
     "\n",
     "CPU_COUNT = os.cpu_count() or 4\n",
+    "DATA_WORKERS = max(2, min(8, CPU_COUNT - 1))\n",
     "GPU_AVAILABLE = torch.cuda.is_available()\n",
-    "PERFORMANCE_MODE = os.environ.get(\"LIFD_PERF_MODE\", \"fast\").lower()\n",
-    "if PERFORMANCE_MODE not in {\"fast\", \"balanced\", \"throughput\"}:\n",
-    "    PERFORMANCE_MODE = \"fast\"\n",
-    "\n",
-    "if PERFORMANCE_MODE == \"throughput\":\n",
-    "    DATA_WORKERS = max(4, min(8, CPU_COUNT - 1))\n",
-    "    TRAIN_BATCH_SIZE = 32 if GPU_AVAILABLE else 8\n",
-    "    GRAD_ACCUM_STEPS = 1\n",
-    "    PREFETCH_FACTOR = 6 if DATA_WORKERS > 0 else None\n",
-    "elif PERFORMANCE_MODE == \"balanced\":\n",
-    "    DATA_WORKERS = max(3, min(6, CPU_COUNT - 1))\n",
-    "    TRAIN_BATCH_SIZE = 24 if GPU_AVAILABLE else 8\n",
-    "    GRAD_ACCUM_STEPS = 1\n",
-    "    PREFETCH_FACTOR = 4 if DATA_WORKERS > 0 else None\n",
-    "else:  # fast / latency-friendly\n",
-    "    half_cpus = max(1, CPU_COUNT // 2)\n",
-    "    DATA_WORKERS = max(1, min(4, half_cpus))\n",
-    "    TRAIN_BATCH_SIZE = 16 if GPU_AVAILABLE else 8\n",
-    "    GRAD_ACCUM_STEPS = 1\n",
-    "    PREFETCH_FACTOR = 2 if DATA_WORKERS > 0 else None\n",
+    "TRAIN_BATCH_SIZE = 32 if GPU_AVAILABLE else 8\n",
+    "GRAD_ACCUM_STEPS = 1 if GPU_AVAILABLE else 2\n",
+    "PREFETCH_FACTOR = 4 if DATA_WORKERS > 0 else None\n",
     "\n",
     "BASE_PATH = Path(DRIVE_BASE_DIR)\n",
     "if USE_COLAB:\n",
@@ -156,8 +142,10 @@
     "                    out_file.write(chunk)\n",
     "        response.close()\n",
     "        return dest_path\n",
+    "\n",
     "    if hf_hub_download is None:\n",
     "        raise RuntimeError(\"huggingface_hub is required to download CASIA2.zip when HF_FILE_URL is not provided.\")\n",
+    "\n",
     "    return Path(\n",
     "        hf_hub_download(\n",
     "            repo_id=HF_REPO_ID,\n",
@@ -171,13 +159,18 @@
     "\n",
     "def _extract_zip_flat(zip_path: Path, destination: Path) -> None:\n",
     "    with ZipFile(zip_path) as archive:\n",
-    "        for member in archive.infolist():\n",
+    "        members = [\n",
+    "            m for m in archive.infolist()\n",
+    "            if m.filename and not m.filename.startswith(\"__MACOSX\")\n",
+    "        ]\n",
+    "\n",
+    "        for member in tqdm(members, desc=\"Extracting CASIA2\", unit=\"file\"):\n",
     "            member_path = Path(member.filename)\n",
-    "            if not member_path.parts:\n",
-    "                continue\n",
-    "            if member_path.parts[0] == \"__MACOSX\":\n",
-    "                continue\n",
-    "            relative_parts = member_path.parts[1:] if len(member_path.parts) > 1 else member_path.parts\n",
+    "            relative_parts = (\n",
+    "                member_path.parts[1:]\n",
+    "                if len(member_path.parts) > 1\n",
+    "                else member_path.parts\n",
+    "            )\n",
     "            if not relative_parts:\n",
     "                continue\n",
     "            target_path = destination.joinpath(*relative_parts)\n",
@@ -192,18 +185,32 @@
     "def ensure_dataset_ready() -> None:\n",
     "    if not USE_COLAB:\n",
     "        return\n",
+    "\n",
     "    DATASET_ROOT.parent.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
     "    if DATASET_ROOT.exists() and any(DATASET_ROOT.iterdir()):\n",
-    "        print(f\"Dataset already available at {DATASET_ROOT}\")\n",
+    "        print(f\"Dataset already extracted at {DATASET_ROOT} — skipping extraction.\")\n",
     "        return\n",
+    "\n",
     "    zip_file_path = DATASET_ROOT.parent / HF_FILE_NAME\n",
-    "    downloaded_path = _download_hf_zip(zip_file_path)\n",
-    "    if downloaded_path != zip_file_path:\n",
-    "        shutil.copy(downloaded_path, zip_file_path)\n",
+    "\n",
+    "    if zip_file_path.exists() and zip_file_path.stat().st_size > 0:\n",
+    "        print(f\"ZIP file already exists at {zip_file_path} — skipping download.\")\n",
     "        downloaded_path = zip_file_path\n",
-    "    DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
-    "    _extract_zip_flat(downloaded_path, DATASET_ROOT)\n",
-    "    print(f\"Dataset extracted to {DATASET_ROOT}\")\n",
+    "    else:\n",
+    "        print(\"Downloading CASIA2.zip …\")\n",
+    "        downloaded_path = _download_hf_zip(zip_file_path)\n",
+    "        if downloaded_path != zip_file_path:\n",
+    "            shutil.copy(downloaded_path, zip_file_path)\n",
+    "            downloaded_path = zip_file_path\n",
+    "\n",
+    "    if not DATASET_ROOT.exists() or not any(DATASET_ROOT.iterdir()):\n",
+    "        print(\"Extracting CASIA2.zip …\")\n",
+    "        DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
+    "        _extract_zip_flat(downloaded_path, DATASET_ROOT)\n",
+    "        print(f\"Dataset extracted to {DATASET_ROOT}\")\n",
+    "    else:\n",
+    "        print(f\"{DATASET_ROOT} already populated — skipping extraction.\")\n",
     "\n",
     "\n",
     "ensure_dataset_ready()\n",
@@ -214,7 +221,7 @@
     "    collect_visual_samples,\n",
     "    evaluate_split,\n",
     "    load_model_from_checkpoint,\n",
-    " )"
+    ")"
    ]
   },
   {
@@ -260,6 +267,16 @@
     "    save_best_only=True,\n",
     "    use_amp=True,\n",
     "    resume_from=None,\n",
+    "    include_aux_features=True,\n",
+    "    loss_type=\"bce_dice\",\n",
+    "    bce_weight=0.6,\n",
+    "    dice_weight=0.4,\n",
+    "    pos_weight=3.0,\n",
+    "    eval_thresholds=[0.3, 0.5, 0.7],\n",
+    "    primary_eval_threshold=0.5,\n",
+    "    lr_scheduler_type=\"plateau\",\n",
+    "    lr_scheduler_factor=0.5,\n",
+    "    lr_scheduler_patience=2, \n",
     ")"
    ]
   },
@@ -278,6 +295,11 @@
     "    use_skip_connections=True,\n",
     "    pretrained_backbones=True,\n",
     "    fused_channels=256,\n",
+    "    use_noise_branch=True,\n",
+    "    noise_branch_base_channels=48,\n",
+    "    noise_branch_num_stages=4,\n",
+    "    noise_branch_use_residual=True,\n",
+    "    noise_branch_use_high_pass=True,\n",
     ")"
    ]
   },
@@ -349,6 +371,58 @@
    "source": [
     "## Evaluation, Samples, and Ablations\n",
     "Use the helpers below to load a checkpoint, compute aggregate metrics + confusion matrix on any split, and visualize 10 qualitative test samples aligned as image / ground-truth / prediction / overlay columns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "183448d6",
+   "metadata": {},
+   "source": [
+    "### Export / Inference With Residual Noise Branch\n",
+    "\n",
+    "To keep the residual branch effective after exporting checkpoints:\n",
+    "\n",
+    "\n",
+    "1. Save the trained `HybridForgeryConfig` alongside the weights so inference knows that the noise branch is enabled.\n",
+    "2. When loading `.npz` samples, fetch the `residual`/`high_pass` arrays and convert them to `torch.Tensor` with shape `[1, 3, H, W]` so they can be passed through `model.forward(..., noise_features=...)`.\n",
+    "3. If a deployment source lacks these tensors, create zero tensors with the correct shape – the branch will stay active without contributing spurious signals.\n",
+    "4. Package your exporter (ONNX/TorchScript) to accept both the RGB image and the auxiliary channels; downstream consumers must feed both for best accuracy."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1511c025",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import numpy as np\n",
+    "\n",
+    "def load_auxiliary_tensors(npz_path: Path, device: torch.device, spatial_hw: tuple[int, int]):\n",
+    "    with np.load(npz_path, allow_pickle=True) as data:\n",
+    "        noise_inputs = {}\n",
+    "        for key in (\"residual\", \"high_pass\"):\n",
+    "            if key in data.files:\n",
+    "                tensor = torch.from_numpy(data[key].transpose(2, 0, 1)).unsqueeze(0)\n",
+    "                noise_inputs[key] = tensor.to(device)\n",
+    "        if not noise_inputs:\n",
+    "            h, w = spatial_hw\n",
+    "            noise_inputs[\"residual\"] = torch.zeros(1, 3, h, w, device=device)\n",
+    "        return torch.from_numpy(data[\"image\"].transpose(2, 0, 1)).unsqueeze(0).to(device), noise_inputs\n",
+    "\n",
+    "\n",
+    "def predict_single_npz(checkpoint_path: Path, npz_path: Path, threshold: float = 0.5):\n",
+    "    checkpoint = torch.load(checkpoint_path, map_location=\"cpu\")\n",
+    "    cfg = HybridForgeryConfig(**checkpoint[\"config\"][\"model_config\"])\n",
+    "    model = HybridForgeryDetector(cfg).to(train_config.resolved_device())\n",
+    "    model.load_state_dict(checkpoint[\"model_state\"])\n",
+    "    model.eval()\n",
+    "\n",
+    "    image, noise_inputs = load_auxiliary_tensors(npz_path, train_config.resolved_device(), spatial_hw=(train_config.target_size, train_config.target_size))\n",
+    "    with torch.no_grad():\n",
+    "        mask = model.predict_mask(image, threshold=threshold, noise_features=noise_inputs)\n",
+    "    return mask.squeeze().cpu().numpy()\n"
    ]
   },
   {
