--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -74,6 +74,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "\n",
     "from copy import deepcopy\n",
     "from dataclasses import asdict\n",
     "from pathlib import Path\n",
@@ -106,16 +109,30 @@
     "except ImportError:\n",
     "    userdata = None\n",
     "\n",
-    "from tqdm import tqdm\n",
-    "\n",
     "torch.set_float32_matmul_precision(\"high\")\n",
     "\n",
     "CPU_COUNT = os.cpu_count() or 4\n",
-    "DATA_WORKERS = max(2, min(8, CPU_COUNT - 1))\n",
     "GPU_AVAILABLE = torch.cuda.is_available()\n",
-    "TRAIN_BATCH_SIZE = 32 if GPU_AVAILABLE else 8\n",
-    "GRAD_ACCUM_STEPS = 1 if GPU_AVAILABLE else 2\n",
-    "PREFETCH_FACTOR = 4 if DATA_WORKERS > 0 else None\n",
+    "PERFORMANCE_MODE = os.environ.get(\"LIFD_PERF_MODE\", \"fast\").lower()\n",
+    "if PERFORMANCE_MODE not in {\"fast\", \"balanced\", \"throughput\"}:\n",
+    "    PERFORMANCE_MODE = \"fast\"\n",
+    "\n",
+    "if PERFORMANCE_MODE == \"throughput\":\n",
+    "    DATA_WORKERS = max(4, min(8, CPU_COUNT - 1))\n",
+    "    TRAIN_BATCH_SIZE = 32 if GPU_AVAILABLE else 8\n",
+    "    GRAD_ACCUM_STEPS = 1\n",
+    "    PREFETCH_FACTOR = 6 if DATA_WORKERS > 0 else None\n",
+    "elif PERFORMANCE_MODE == \"balanced\":\n",
+    "    DATA_WORKERS = max(3, min(6, CPU_COUNT - 1))\n",
+    "    TRAIN_BATCH_SIZE = 24 if GPU_AVAILABLE else 8\n",
+    "    GRAD_ACCUM_STEPS = 1\n",
+    "    PREFETCH_FACTOR = 4 if DATA_WORKERS > 0 else None\n",
+    "else:  # fast / latency-friendly\n",
+    "    half_cpus = max(1, CPU_COUNT // 2)\n",
+    "    DATA_WORKERS = max(1, min(4, half_cpus))\n",
+    "    TRAIN_BATCH_SIZE = 16 if GPU_AVAILABLE else 8\n",
+    "    GRAD_ACCUM_STEPS = 1\n",
+    "    PREFETCH_FACTOR = 2 if DATA_WORKERS > 0 else None\n",
     "\n",
     "BASE_PATH = Path(DRIVE_BASE_DIR)\n",
     "if USE_COLAB:\n",
@@ -142,10 +159,8 @@
     "                    out_file.write(chunk)\n",
     "        response.close()\n",
     "        return dest_path\n",
-    "\n",
     "    if hf_hub_download is None:\n",
     "        raise RuntimeError(\"huggingface_hub is required to download CASIA2.zip when HF_FILE_URL is not provided.\")\n",
-    "\n",
     "    return Path(\n",
     "        hf_hub_download(\n",
     "            repo_id=HF_REPO_ID,\n",
@@ -159,18 +174,13 @@
     "\n",
     "def _extract_zip_flat(zip_path: Path, destination: Path) -> None:\n",
     "    with ZipFile(zip_path) as archive:\n",
-    "        members = [\n",
-    "            m for m in archive.infolist()\n",
-    "            if m.filename and not m.filename.startswith(\"__MACOSX\")\n",
-    "        ]\n",
-    "\n",
-    "        for member in tqdm(members, desc=\"Extracting CASIA2\", unit=\"file\"):\n",
+    "        for member in archive.infolist():\n",
     "            member_path = Path(member.filename)\n",
-    "            relative_parts = (\n",
-    "                member_path.parts[1:]\n",
-    "                if len(member_path.parts) > 1\n",
-    "                else member_path.parts\n",
-    "            )\n",
+    "            if not member_path.parts:\n",
+    "                continue\n",
+    "            if member_path.parts[0] == \"__MACOSX\":\n",
+    "                continue\n",
+    "            relative_parts = member_path.parts[1:] if len(member_path.parts) > 1 else member_path.parts\n",
     "            if not relative_parts:\n",
     "                continue\n",
     "            target_path = destination.joinpath(*relative_parts)\n",
@@ -185,43 +195,29 @@
     "def ensure_dataset_ready() -> None:\n",
     "    if not USE_COLAB:\n",
     "        return\n",
-    "\n",
     "    DATASET_ROOT.parent.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
     "    if DATASET_ROOT.exists() and any(DATASET_ROOT.iterdir()):\n",
-    "        print(f\"Dataset already extracted at {DATASET_ROOT} — skipping extraction.\")\n",
+    "        print(f\"Dataset already available at {DATASET_ROOT}\")\n",
     "        return\n",
-    "\n",
     "    zip_file_path = DATASET_ROOT.parent / HF_FILE_NAME\n",
-    "\n",
-    "    if zip_file_path.exists() and zip_file_path.stat().st_size > 0:\n",
-    "        print(f\"ZIP file already exists at {zip_file_path} — skipping download.\")\n",
+    "    downloaded_path = _download_hf_zip(zip_file_path)\n",
+    "    if downloaded_path != zip_file_path:\n",
+    "        shutil.copy(downloaded_path, zip_file_path)\n",
     "        downloaded_path = zip_file_path\n",
-    "    else:\n",
-    "        print(\"Downloading CASIA2.zip …\")\n",
-    "        downloaded_path = _download_hf_zip(zip_file_path)\n",
-    "        if downloaded_path != zip_file_path:\n",
-    "            shutil.copy(downloaded_path, zip_file_path)\n",
-    "            downloaded_path = zip_file_path\n",
-    "\n",
-    "    if not DATASET_ROOT.exists() or not any(DATASET_ROOT.iterdir()):\n",
-    "        print(\"Extracting CASIA2.zip …\")\n",
-    "        DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
-    "        _extract_zip_flat(downloaded_path, DATASET_ROOT)\n",
-    "        print(f\"Dataset extracted to {DATASET_ROOT}\")\n",
-    "    else:\n",
-    "        print(f\"{DATASET_ROOT} already populated — skipping extraction.\")\n",
+    "    DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
+    "    _extract_zip_flat(downloaded_path, DATASET_ROOT)\n",
+    "    print(f\"Dataset extracted to {DATASET_ROOT}\")\n",
     "\n",
     "\n",
     "ensure_dataset_ready()\n",
     "\n",
-    "from train import TrainConfig, run_training\n",
+    "from train import LossConfig, TrainConfig, run_training\n",
     "from model.hybrid_forgery_detector import HybridForgeryConfig\n",
     "from evaluation.eval_utils import (\n",
     "    collect_visual_samples,\n",
     "    evaluate_split,\n",
     "    load_model_from_checkpoint,\n",
-    ")"
+    " )"
    ]
   },
   {
@@ -242,6 +238,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "b551be8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_config = LossConfig(\n",
+    "    use_bce=True,\n",
+    "    bce_weight=1.0,\n",
+    "    use_dice=True,\n",
+    "    dice_weight=1.0,\n",
+    "    use_focal_tversky=True,\n",
+    "    focal_tversky_weight=0.5,\n",
+    "    focal_alpha=0.7,\n",
+    "    focal_beta=0.3,\n",
+    "    focal_gamma=1.2,\n",
+    "    use_boundary=True,\n",
+    "    boundary_weight=0.15,\n",
+    "    apply_lovasz=True,\n",
+    "    lovasz_weight=0.2,\n",
+    ")\n",
+    "loss_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "1ec2b9fb",
    "metadata": {},
    "outputs": [],
@@ -250,9 +271,9 @@
     "    prepared_root=str(DATASET_ROOT),\n",
     "    train_split=\"train\",\n",
     "    val_split=\"val\",\n",
-    "    target_size=128,\n",
+    "    target_size=384,\n",
     "    batch_size=TRAIN_BATCH_SIZE,\n",
-    "    num_epochs=10,\n",
+    "    num_epochs=14,\n",
     "    learning_rate=1e-4,\n",
     "    weight_decay=1e-2,\n",
     "    num_workers=DATA_WORKERS,\n",
@@ -267,16 +288,13 @@
     "    save_best_only=True,\n",
     "    use_amp=True,\n",
     "    resume_from=None,\n",
-    "    include_aux_features=True,\n",
-    "    loss_type=\"bce_dice\",\n",
-    "    bce_weight=0.6,\n",
-    "    dice_weight=0.4,\n",
-    "    pos_weight=3.0,\n",
-    "    eval_thresholds=[0.3, 0.5, 0.7],\n",
+    "    loss_config=loss_config,\n",
+    "    balance_real_fake=True,\n",
+    "    balanced_positive_ratio=0.6,\n",
+    "    eval_thresholds=[0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8],\n",
     "    primary_eval_threshold=0.5,\n",
-    "    lr_scheduler_type=\"plateau\",\n",
-    "    lr_scheduler_factor=0.5,\n",
-    "    lr_scheduler_patience=2, \n",
+    "    early_stopping_patience=4,\n",
+    "    early_stopping_min_delta=5e-4,\n",
     ")"
    ]
   },
@@ -448,6 +466,9 @@
    "outputs": [],
    "source": [
     "model, trained_config = load_model_from_checkpoint(checkpoint_path, device=eval_device)\n",
+    "auto_threshold = True\n",
+    "threshold_candidates = trained_config.eval_thresholds or [0.5]\n",
+    "threshold_metric = \"f1\"\n",
     "evaluation_summary = evaluate_split(\n",
     "    model=model,\n",
     "    train_config=trained_config,\n",
@@ -455,10 +476,14 @@
     "    batch_size=trained_config.batch_size,\n",
     "    device=eval_device,\n",
     "    max_batches=max_eval_batches,\n",
-    " )\n",
+    "    auto_threshold=auto_threshold,\n",
+    "    threshold_candidates=threshold_candidates,\n",
+    "    threshold_metric=threshold_metric,\n",
+    ")\n",
     "\n",
-    "print(\"Aggregate metrics:\")\n",
-    "pprint(evaluation_summary.metrics)\n",
+    "best_threshold = evaluation_summary.metrics.get(\"best_threshold\", {}).get(\"value\", threshold_candidates[0])\n",
+    "print(\"Aggregate metrics (threshold {:.2f}):\".format(best_threshold))\n",
+    "pprint({k: v for k, v in evaluation_summary.metrics.items() if k in {\"loss\", \"dice\", \"iou\", \"precision\", \"recall\", \"f1\"}})\n",
     "print(\"\\nConfusion matrix (rows=actual clean/tampered, cols=predicted clean/tampered):\")\n",
     "if pd is not None:\n",
     "    display(pd.DataFrame(\n",
@@ -469,17 +494,10 @@
     "else:\n",
     "    print(evaluation_summary.confusion_matrix)\n",
     "\n",
-    "if \"ablation_results\" not in globals():\n",
-    "    ablation_results = []\n",
-    "\n",
-    "ablation_results.append({\n",
-    "    \"label\": ablation_label,\n",
-    "    **evaluation_summary.metrics,\n",
-    "})\n",
-    "if pd is not None:\n",
-    "    display(pd.DataFrame(ablation_results))\n",
-    "else:\n",
-    "    print(ablation_results)"
+    "threshold_table = evaluation_summary.metrics.get(\"thresholds\", {})\n",
+    "if pd is not None and threshold_table:\n",
+    "    display(pd.DataFrame(threshold_table).T.sort_index())\n",
+    "print(\"Best threshold ({}): {:.2f}\".format(threshold_metric, best_threshold))"
    ]
   },
   {
@@ -490,13 +508,15 @@
    "outputs": [],
    "source": [
     "num_preview_samples = 10\n",
+    "preview_threshold = best_threshold if \"best_threshold\" in locals() else 0.5\n",
     "preview_samples = collect_visual_samples(\n",
     "    model=model,\n",
     "    train_config=trained_config,\n",
     "    split=evaluation_split,\n",
     "    num_samples=num_preview_samples,\n",
     "    device=eval_device,\n",
-    " )\n",
+    "    threshold=preview_threshold,\n",
+    ")\n",
     "\n",
     "columns = [\"image\", \"ground_truth\", \"prediction\", \"overlay\"]\n",
     "rows = len(preview_samples)\n",
