Refactor dataset handling in training notebook to utilize huggingface_hub's snapshot_download and improve performance mode configuration

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -97,9 +97,10 @@
     "    requests = None\n",
     "\n",
     "try:\n",
-    "    from huggingface_hub import hf_hub_download\n",
+    "    from huggingface_hub import hf_hub_download, snapshot_download\n",
     "except ImportError:\n",
     "    hf_hub_download = None\n",
+    "    snapshot_download = None\n",
     "\n",
     "try:\n",
     "    from google.colab import userdata\n",
@@ -110,9 +111,16 @@
     "\n",
     "CPU_COUNT = os.cpu_count() or 4\n",
     "GPU_AVAILABLE = torch.cuda.is_available()\n",
-    "PERFORMANCE_MODE = os.environ.get(\"LIFD_PERF_MODE\", \"fast\").lower()\n",
-    "if PERFORMANCE_MODE not in {\"fast\", \"balanced\", \"throughput\"}:\n",
-    "    PERFORMANCE_MODE = \"fast\"\n",
+    "env_perf_mode = os.environ.get(\"LIFD_PERF_MODE\", \"\").strip().lower()\n",
+    "if env_perf_mode in {\"fast\", \"balanced\", \"throughput\"}:\n",
+    "    PERFORMANCE_MODE = env_perf_mode\n",
+    "else:\n",
+    "    if GPU_AVAILABLE and CPU_COUNT >= 8:\n",
+    "        PERFORMANCE_MODE = \"throughput\"\n",
+    "    elif CPU_COUNT >= 6:\n",
+    "        PERFORMANCE_MODE = \"balanced\"\n",
+    "    else:\n",
+    "        PERFORMANCE_MODE = \"fast\"\n",
     "\n",
     "if PERFORMANCE_MODE == \"throughput\":\n",
     "    DATA_WORKERS = max(4, min(8, CPU_COUNT - 1))\n",
@@ -124,7 +132,7 @@
     "    TRAIN_BATCH_SIZE = 24 if GPU_AVAILABLE else 8\n",
     "    GRAD_ACCUM_STEPS = 1\n",
     "    PREFETCH_FACTOR = 4 if DATA_WORKERS > 0 else None\n",
-    "else:  # fast / latency-friendly\n",
+    "else:\n",
     "    half_cpus = max(1, CPU_COUNT // 2)\n",
     "    DATA_WORKERS = max(1, min(4, half_cpus))\n",
     "    TRAIN_BATCH_SIZE = 16 if GPU_AVAILABLE else 8\n",
@@ -132,81 +140,6 @@
     "    PREFETCH_FACTOR = 2 if DATA_WORKERS > 0 else None\n",
     "\n",
     "BASE_PATH = Path(DRIVE_BASE_DIR)\n",
-    "if USE_COLAB:\n",
-    "    DATASET_ROOT = Path(\"/content/data/CASIA2\")\n",
-    "else:\n",
-    "    DATASET_ROOT = Path(\"prepared\") / \"CASIA2\"\n",
-    "\n",
-    "HF_REPO_ID = \"juhenes/image-forgery-detection\"\n",
-    "HF_FILE_NAME = \"CASIA2.zip\"\n",
-    "HF_FILE_URL = None\n",
-    "HF_TOKEN = userdata.get(\"HUGGINGFACE_TOKEN\") if userdata is not None else os.environ.get(\"HUGGINGFACE_TOKEN\")\n",
-    "\n",
-    "\n",
-    "def _download_hf_zip(dest_path: Path) -> Path:\n",
-    "    if HF_FILE_URL:\n",
-    "        if requests is None:\n",
-    "            raise RuntimeError(\"requests is required to download from HF_FILE_URL.\")\n",
-    "        headers = {\"Authorization\": f\"Bearer {HF_TOKEN}\"} if HF_TOKEN else None\n",
-    "        response = requests.get(HF_FILE_URL, stream=True, headers=headers)\n",
-    "        response.raise_for_status()\n",
-    "        with open(dest_path, \"wb\") as out_file:\n",
-    "            for chunk in response.iter_content(chunk_size=1 << 20):\n",
-    "                if chunk:\n",
-    "                    out_file.write(chunk)\n",
-    "        response.close()\n",
-    "        return dest_path\n",
-    "    if hf_hub_download is None:\n",
-    "        raise RuntimeError(\"huggingface_hub is required to download CASIA2.zip when HF_FILE_URL is not provided.\")\n",
-    "    return Path(\n",
-    "        hf_hub_download(\n",
-    "            repo_id=HF_REPO_ID,\n",
-    "            filename=HF_FILE_NAME,\n",
-    "            token=HF_TOKEN,\n",
-    "            repo_type=\"dataset\",\n",
-    "            force_download=False,\n",
-    "        )\n",
-    "    )\n",
-    "\n",
-    "\n",
-    "def _extract_zip_flat(zip_path: Path, destination: Path) -> None:\n",
-    "    with ZipFile(zip_path) as archive:\n",
-    "        for member in archive.infolist():\n",
-    "            member_path = Path(member.filename)\n",
-    "            if not member_path.parts:\n",
-    "                continue\n",
-    "            if member_path.parts[0] == \"__MACOSX\":\n",
-    "                continue\n",
-    "            relative_parts = member_path.parts[1:] if len(member_path.parts) > 1 else member_path.parts\n",
-    "            if not relative_parts:\n",
-    "                continue\n",
-    "            target_path = destination.joinpath(*relative_parts)\n",
-    "            if member.is_dir():\n",
-    "                target_path.mkdir(parents=True, exist_ok=True)\n",
-    "                continue\n",
-    "            target_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "            with archive.open(member) as src, open(target_path, \"wb\") as dst:\n",
-    "                shutil.copyfileobj(src, dst)\n",
-    "\n",
-    "\n",
-    "def ensure_dataset_ready() -> None:\n",
-    "    if not USE_COLAB:\n",
-    "        return\n",
-    "    DATASET_ROOT.parent.mkdir(parents=True, exist_ok=True)\n",
-    "    if DATASET_ROOT.exists() and any(DATASET_ROOT.iterdir()):\n",
-    "        print(f\"Dataset already available at {DATASET_ROOT}\")\n",
-    "        return\n",
-    "    zip_file_path = DATASET_ROOT.parent / HF_FILE_NAME\n",
-    "    downloaded_path = _download_hf_zip(zip_file_path)\n",
-    "    if downloaded_path != zip_file_path:\n",
-    "        shutil.copy(downloaded_path, zip_file_path)\n",
-    "        downloaded_path = zip_file_path\n",
-    "    DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
-    "    _extract_zip_flat(downloaded_path, DATASET_ROOT)\n",
-    "    print(f\"Dataset extracted to {DATASET_ROOT}\")\n",
-    "\n",
-    "\n",
-    "ensure_dataset_ready()\n",
     "\n",
     "from train import LossConfig, TrainConfig, run_training\n",
     "from model.hybrid_forgery_detector import HybridForgeryConfig\n",
@@ -215,6 +148,54 @@
     "    evaluate_split,\n",
     "    load_model_from_checkpoint,\n",
     " )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57ddd9a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pathlib import Path\n",
+    "import os\n",
+    "import shutil\n",
+    "\n",
+    "DATASET_ROOT = Path(\"/content/data\") if USE_COLAB else Path(\"prepared\") / \"CASIA2\"\n",
+    "DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
+    "\n",
+    "HF_REPO_ID = \"juhenes/lifd\"\n",
+    "HF_REVISION = os.environ.get(\"HF_DATA_REVISION\", \"main\")\n",
+    "HF_TOKEN = userdata.get(\"HUGGINGFACE_TOKEN\") if userdata is not None else os.environ.get(\"HUGGINGFACE_TOKEN\")\n",
+    "\n",
+    "def _has_complete_dataset(root: Path) -> bool:\n",
+    "    manifest_exists = (root / \"manifest.parquet\").exists()\n",
+    "    shard_exists = any(root.rglob(\"shard_*.tar\"))\n",
+    "    return manifest_exists and shard_exists\n",
+    "\n",
+    "def ensure_dataset_ready(force_sync: bool = False) -> None:\n",
+    "    if not force_sync and _has_complete_dataset(DATASET_ROOT):\n",
+    "        print(f\"Dataset already available at {DATASET_ROOT}\")\n",
+    "        return\n",
+    "\n",
+    "    if snapshot_download is None:\n",
+    "        raise RuntimeError(\"huggingface_hub.snapshot_download is unavailable. Install huggingface_hub>=0.14.\")\n",
+    "\n",
+    "    print(f\"Syncing dataset repo '{HF_REPO_ID}' ({HF_REVISION}) -> {DATASET_ROOT} ...\")\n",
+    "    snapshot_dir = Path(snapshot_download(\n",
+    "        repo_id=HF_REPO_ID,\n",
+    "        revision=HF_REVISION,\n",
+    "        token=HF_TOKEN,\n",
+    "        repo_type=\"dataset\",\n",
+    "    ))\n",
+    "    shutil.copytree(snapshot_dir, DATASET_ROOT, dirs_exist_ok=True)\n",
+    "    if _has_complete_dataset(DATASET_ROOT):\n",
+    "        print(\"Dataset sync finished.\")\n",
+    "    else:\n",
+    "        raise RuntimeError(\n",
+    "            \"Dataset sync completed but manifest/shards were not found. Verify the Hub repo contents.\")\n",
+    "\n",
+    "ensure_dataset_ready()"
    ]
   },
   {
@@ -270,7 +251,7 @@
     "    val_split=\"val\",\n",
     "    target_size=384,\n",
     "    batch_size=TRAIN_BATCH_SIZE,\n",
-    "    num_epochs=14,\n",
+    "    num_epochs=30,\n",
     "    learning_rate=1e-4,\n",
     "    weight_decay=1e-2,\n",
     "    num_workers=DATA_WORKERS,\n",
@@ -290,7 +271,7 @@
     "    balanced_positive_ratio=0.6,\n",
     "    eval_thresholds=[0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8],\n",
     "    primary_eval_threshold=0.5,\n",
-    "    early_stopping_patience=4,\n",
+    "    early_stopping_patience=6,\n",
     "    early_stopping_min_delta=5e-4,\n",
     ")"
    ]
@@ -388,22 +369,6 @@
    "source": [
     "## Evaluation, Samples, and Ablations\n",
     "Use the helpers below to load a checkpoint, compute aggregate metrics + confusion matrix on any split, and visualize 10 qualitative test samples aligned as image / ground-truth / prediction / overlay columns."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "183448d6",
-   "metadata": {},
-   "source": [
-    "### Export / Inference With Residual Noise Branch\n",
-    "\n",
-    "To keep the residual branch effective after exporting checkpoints:\n",
-    "\n",
-    "\n",
-    "1. Save the trained `HybridForgeryConfig` alongside the weights so inference knows that the noise branch is enabled.\n",
-    "2. When loading `.npz` samples, fetch the `residual`/`high_pass` arrays and convert them to `torch.Tensor` with shape `[1, 3, H, W]` so they can be passed through `model.forward(..., noise_features=...)`.\n",
-    "3. If a deployment source lacks these tensors, create zero tensors with the correct shape – the branch will stay active without contributing spurious signals.\n",
-    "4. Package your exporter (ONNX/TorchScript) to accept both the RGB image and the auxiliary channels; downstream consumers must feed both for best accuracy."
    ]
   },
   {
@@ -550,12 +515,12 @@
     "from io import BytesIO\n",
     "from PIL import Image, ImageOps\n",
     "try:\n",
-    "    from google.colab import files as colab_files  # type: ignore\n",
+    "    from google.colab import files as colab_files\n",
     "except ImportError:\n",
     "    colab_files = None\n",
     "    \n",
     "def _predict_image_array(image_arr: np.ndarray, checkpoint_path: Path, threshold: float) -> np.ndarray:\n",
-    "    from model.hybrid_forgery_detector import HybridForgeryDetector  # local import to keep cell optional\n",
+    "    from model.hybrid_forgery_detector import HybridForgeryDetector\n",
     "    checkpoint = torch.load(checkpoint_path, map_location=\"cpu\")\n",
     "    cfg = HybridForgeryConfig(**checkpoint[\"config\"][\"model_config\"])\n",
     "    device = train_config.resolved_device()\n",
