--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -159,7 +159,7 @@
    "source": [
     "from pathlib import Path\n",
     "import os\n",
-    "import shutil\n",
+    "from huggingface_hub import snapshot_download\n",
     "\n",
     "DATASET_ROOT = Path(\"/content/data\") if USE_COLAB else Path(\"prepared\") / \"CASIA2\"\n",
     "DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
@@ -170,32 +170,21 @@
     "\n",
     "def _has_complete_dataset(root: Path) -> bool:\n",
     "    manifest_exists = (root / \"manifest.parquet\").exists()\n",
-    "    shard_exists = any(root.rglob(\"shard_*.tar\"))\n",
+    "    shard_exists = bool(list(root.glob(\"shard_*.tar\")))\n",
     "    return manifest_exists and shard_exists\n",
     "\n",
-    "def ensure_dataset_ready(force_sync: bool = False) -> None:\n",
+    "def ensure_dataset_ready(force_sync: bool = False) -> Path:\n",
     "    if not force_sync and _has_complete_dataset(DATASET_ROOT):\n",
-    "        print(f\"Dataset already available at {DATASET_ROOT}\")\n",
-    "        return\n",
-    "\n",
-    "    if snapshot_download is None:\n",
-    "        raise RuntimeError(\"huggingface_hub.snapshot_download is unavailable. Install huggingface_hub>=0.14.\")\n",
-    "\n",
-    "    print(f\"Syncing dataset repo '{HF_REPO_ID}' ({HF_REVISION}) -> {DATASET_ROOT} ...\")\n",
+    "        return DATASET_ROOT\n",
     "    snapshot_dir = Path(snapshot_download(\n",
     "        repo_id=HF_REPO_ID,\n",
     "        revision=HF_REVISION,\n",
     "        token=HF_TOKEN,\n",
     "        repo_type=\"dataset\",\n",
     "    ))\n",
-    "    shutil.copytree(snapshot_dir, DATASET_ROOT, dirs_exist_ok=True)\n",
-    "    if _has_complete_dataset(DATASET_ROOT):\n",
-    "        print(\"Dataset sync finished.\")\n",
-    "    else:\n",
-    "        raise RuntimeError(\n",
-    "            \"Dataset sync completed but manifest/shards were not found. Verify the Hub repo contents.\")\n",
+    "    return snapshot_dir\n",
     "\n",
-    "ensure_dataset_ready()"
+    "DATASET_ROOT = ensure_dataset_ready()"
    ]
   },
   {
