Refactor dataset management in training notebook to improve manifest handling and add dataset inspection functionality

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -167,24 +167,80 @@
     "HF_REPO_ID = \"juhenes/lifd\"\n",
     "HF_REVISION = os.environ.get(\"HF_DATA_REVISION\", \"main\")\n",
     "HF_TOKEN = userdata.get(\"HUGGINGFACE_TOKEN\") if userdata is not None else os.environ.get(\"HUGGINGFACE_TOKEN\")\n",
+    "MANIFEST_FILENAME = \"manifest.parquet\"\n",
+    "\n",
+    "def _locate_manifest_root(base: Path):\n",
+    "    candidates = [base, base / \"CASIA2\"]\n",
+    "    for candidate in candidates:\n",
+    "        manifest_path = candidate / MANIFEST_FILENAME\n",
+    "        if manifest_path.exists():\n",
+    "            return candidate\n",
+    "    return None\n",
     "\n",
     "def _has_complete_dataset(root: Path) -> bool:\n",
-    "    manifest_exists = (root / \"manifest.parquet\").exists()\n",
-    "    shard_exists = bool(list(root.glob(\"shard_*.tar\")))\n",
-    "    return manifest_exists and shard_exists\n",
+    "    return _locate_manifest_root(root) is not None\n",
     "\n",
     "def ensure_dataset_ready(force_sync: bool = False) -> Path:\n",
-    "    if not force_sync and _has_complete_dataset(DATASET_ROOT):\n",
-    "        return DATASET_ROOT\n",
+    "    if not force_sync:\n",
+    "        local_root = _locate_manifest_root(DATASET_ROOT)\n",
+    "        if local_root is not None:\n",
+    "            return local_root\n",
     "    snapshot_dir = Path(snapshot_download(\n",
     "        repo_id=HF_REPO_ID,\n",
     "        revision=HF_REVISION,\n",
     "        token=HF_TOKEN,\n",
     "        repo_type=\"dataset\",\n",
     "    ))\n",
-    "    return snapshot_dir\n",
+    "    resolved_snapshot = _locate_manifest_root(snapshot_dir)\n",
+    "    if resolved_snapshot is None:\n",
+    "        raise FileNotFoundError(\n",
+    "            f\"Downloaded dataset at {snapshot_dir} does not contain {MANIFEST_FILENAME}.\"\n",
+    "        )\n",
+    "    return resolved_snapshot\n",
     "\n",
     "DATASET_ROOT = ensure_dataset_ready()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2a2c1d03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import islice\n",
+    "from pprint import pprint\n",
+    "from pathlib import Path\n",
+    "import os\n",
+    "\n",
+    "def inspect_prepared_dataset(root: Path, split: str = \"train\", preview: int = 5):\n",
+    "    root = Path(root)\n",
+    "    print(f\"Resolved DATASET_ROOT: {root}\")\n",
+    "    manifest_path = root / \"manifest.parquet\"\n",
+    "    print(f\"Manifest present: {manifest_path.exists()} ({manifest_path})\")\n",
+    "    if not manifest_path.exists():\n",
+    "        return\n",
+    "    try:\n",
+    "        import pandas as pd\n",
+    "        manifest_df = pd.read_parquet(manifest_path)\n",
+    "        print(f\"Manifest rows: {len(manifest_df):,}\")\n",
+    "        label_counts = manifest_df.groupby([\"split\"]).size().to_dict()\n",
+    "        print(\"Rows per split:\", label_counts)\n",
+    "    except Exception as exc:\n",
+    "        print(f\"Manifest read failed: {exc}\")\n",
+    "    split_dir = root / split\n",
+    "    print(f\"Split directory exists: {split_dir.exists()} ({split_dir})\")\n",
+    "    if not split_dir.exists():\n",
+    "        return\n",
+    "    shards = sorted(split_dir.glob(\"*.tar\"))\n",
+    "    print(f\"Found {len(shards)} shard files under {split_dir}\")\n",
+    "    for shard in islice(shards, preview):\n",
+    "        print(f\" - {shard} | exists={shard.exists()} | size={shard.stat().st_size if shard.exists() else 'missing'}\")\n",
+    "    missing = [str(p) for p in shards if not p.exists()]\n",
+    "    if missing:\n",
+    "        print(\"Missing shards:\", missing[:5], \"...\")\n",
+    "\n",
+    "inspect_prepared_dataset(Path(DATASET_ROOT))"
    ]
   },
   {
