Add backbone input size configuration to HybridForgeryConfig for Swin Transformer

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -341,6 +341,7 @@
     "    noise_branch_num_stages=4,\n",
     "    noise_branch_use_residual=True,\n",
     "    noise_branch_use_high_pass=True,\n",
+    "    backbone_input_size=train_config.target_size,\n",
     ")"
    ]
   },
