Enhance training configuration with gradient checkpointing and dynamic batch size adjustments based on GPU memory

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -78,6 +78,7 @@
     "from dataclasses import asdict\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
+    "import math\n",
     "import os\n",
     "import shutil\n",
     "from zipfile import ZipFile\n",
@@ -85,6 +86,8 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import torch\n",
+    "\n",
+    "os.environ.setdefault(\"PYTORCH_CUDA_ALLOC_CONF\", \"expandable_segments:True\")\n",
     "\n",
     "try:\n",
     "    import pandas as pd\n",
@@ -108,9 +111,20 @@
     "    userdata = None\n",
     "\n",
     "torch.set_float32_matmul_precision(\"high\")\n",
+    "if torch.cuda.is_available():\n",
+    "    torch.backends.cudnn.benchmark = True\n",
     "\n",
     "CPU_COUNT = os.cpu_count() or 4\n",
     "GPU_AVAILABLE = torch.cuda.is_available()\n",
+    "if GPU_AVAILABLE:\n",
+    "    try:\n",
+    "        _gpu_props = torch.cuda.get_device_properties(0)\n",
+    "        GPU_TOTAL_MEM_GB = _gpu_props.total_memory / (1024 ** 3)\n",
+    "    except Exception:\n",
+    "        GPU_TOTAL_MEM_GB = None\n",
+    "else:\n",
+    "    GPU_TOTAL_MEM_GB = None\n",
+    "\n",
     "env_perf_mode = os.environ.get(\"LIFD_PERF_MODE\", \"\").strip().lower()\n",
     "if env_perf_mode in {\"fast\", \"balanced\", \"throughput\"}:\n",
     "    PERFORMANCE_MODE = env_perf_mode\n",
@@ -138,6 +152,44 @@
     "    TRAIN_BATCH_SIZE = 16 if GPU_AVAILABLE else 8\n",
     "    GRAD_ACCUM_STEPS = 1\n",
     "    PREFETCH_FACTOR = 2 if DATA_WORKERS > 0 else None\n",
+    "\n",
+    "HEURISTIC_BATCH_SIZE = TRAIN_BATCH_SIZE\n",
+    "SAFE_BATCH_CAP = None\n",
+    "if GPU_TOTAL_MEM_GB is not None:\n",
+    "    if GPU_TOTAL_MEM_GB < 12:\n",
+    "        SAFE_BATCH_CAP = 6\n",
+    "    elif GPU_TOTAL_MEM_GB < 16:\n",
+    "        SAFE_BATCH_CAP = 8\n",
+    "    elif GPU_TOTAL_MEM_GB < 20:\n",
+    "        SAFE_BATCH_CAP = 12\n",
+    "\n",
+    "if SAFE_BATCH_CAP is not None:\n",
+    "    TRAIN_BATCH_SIZE = min(TRAIN_BATCH_SIZE, SAFE_BATCH_CAP)\n",
+    "\n",
+    "if GPU_AVAILABLE:\n",
+    "    MICRO_BATCH_TARGET = 8\n",
+    "    TRAIN_BATCH_SIZE = min(TRAIN_BATCH_SIZE, MICRO_BATCH_TARGET)\n",
+    "    EFFECTIVE_TARGET_BATCH = 24\n",
+    "else:\n",
+    "    EFFECTIVE_TARGET_BATCH = TRAIN_BATCH_SIZE\n",
+    "\n",
+    "GRAD_ACCUM_STEPS = max(GRAD_ACCUM_STEPS, math.ceil(EFFECTIVE_TARGET_BATCH / max(TRAIN_BATCH_SIZE, 1)))\n",
+    "\n",
+    "LIGHTWEIGHT_MODEL = os.environ.get(\"LIFD_LIGHT_MODEL\", \"\").strip().lower() in {\"1\", \"true\", \"yes\", \"on\"}\n",
+    "\n",
+    "if GPU_TOTAL_MEM_GB is not None:\n",
+    "    print(f\"Detected GPU memory: {GPU_TOTAL_MEM_GB:.1f} GB\")\n",
+    "if TRAIN_BATCH_SIZE != HEURISTIC_BATCH_SIZE:\n",
+    "    print(\n",
+    "        f\"Auto-adjusted batch size from {HEURISTIC_BATCH_SIZE} to {TRAIN_BATCH_SIZE} (grad_accum={GRAD_ACCUM_STEPS}).\"\n",
+    "    )\n",
+    "if GRAD_ACCUM_STEPS > 1:\n",
+    "    effective_batch = TRAIN_BATCH_SIZE * GRAD_ACCUM_STEPS\n",
+    "    print(f\"Effective batch size via accumulation: ~{effective_batch}\")\n",
+    "if LIGHTWEIGHT_MODEL:\n",
+    "    print(\"Lightweight model profile enabled (Swin backbone disabled, fused width reduced).\")\n",
+    "else:\n",
+    "    print(\"Full backbone profile enabled (EfficientNet + Swin + UNet).\")\n",
     "\n",
     "BASE_PATH = Path(DRIVE_BASE_DIR)\n",
     "\n",
@@ -294,7 +346,7 @@
     "    prepared_root=str(DATASET_ROOT),\n",
     "    train_split=\"train\",\n",
     "    val_split=\"val\",\n",
-    "    target_size=384,\n",
+    "    target_size=320,\n",
     "    batch_size=TRAIN_BATCH_SIZE,\n",
     "    num_epochs=30,\n",
     "    learning_rate=1e-4,\n",
@@ -328,21 +380,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_config.model_config = HybridForgeryConfig(\n",
+    "model_config_kwargs = dict(\n",
     "    use_efficientnet=True,\n",
-    "    use_swin=True,\n",
+    "    use_swin=not LIGHTWEIGHT_MODEL,\n",
     "    use_segformer=False,\n",
     "    use_unet_decoder=True,\n",
     "    use_skip_connections=True,\n",
     "    pretrained_backbones=True,\n",
-    "    fused_channels=256,\n",
+    "    fused_channels=192 if LIGHTWEIGHT_MODEL else 256,\n",
     "    use_noise_branch=True,\n",
-    "    noise_branch_base_channels=48,\n",
+    "    noise_branch_base_channels=32 if LIGHTWEIGHT_MODEL else 48,\n",
     "    noise_branch_num_stages=4,\n",
     "    noise_branch_use_residual=True,\n",
     "    noise_branch_use_high_pass=True,\n",
     "    backbone_input_size=train_config.target_size,\n",
-    ")"
+    "    gradient_checkpointing=not LIGHTWEIGHT_MODEL,\n",
+    ")\n",
+    "\n",
+    "train_config.model_config = HybridForgeryConfig(**model_config_kwargs)"
    ]
   },
   {
