Update training configuration to disable saving the best model and set resume path for training

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -360,9 +360,9 @@
     "    log_interval=10,\n",
     "    checkpoint_dir=str(BASE_PATH / \"checkpoints\"),\n",
     "    checkpoint_interval=1,\n",
-    "    save_best_only=True,\n",
+    "    save_best_only=False,\n",
     "    use_amp=True,\n",
-    "    resume_from=None,\n",
+    "    resume_from=str(BASE_PATH / \"checkpoints\" / \"epoch_001.pt\"),\n",
     "    loss_config=loss_config,\n",
     "    balance_real_fake=True,\n",
     "    balanced_positive_ratio=0.6,\n",
