feat: Enhance multi-source dataset handling and sampling
- Updated .gitignore to include __pycache__ and related files.
- Modified PreparedForgeryDataset to accept multiple prepared roots and combined manifests, improving dataset loading flexibility.
- Introduced EvenMultiSourceBatchSampler and EvenMultiSourceBalancedSampler for balanced sampling across multiple dataset sources.
- Added a test script for validating multi-dataset loading and batching functionality.
- Created unit tests to ensure correct behavior of dataset loading and trainer integration.
- Updated training configuration to support multiple prepared roots and adjusted DataLoader behavior accordingly.
- Enhanced training launcher to handle combined manifests and dataset preparation more robustly.

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -211,18 +211,37 @@
    "source": [
     "from pathlib import Path\n",
     "import os\n",
-    "from huggingface_hub import snapshot_download\n",
+    "import sys\n",
+    "import subprocess\n",
     "\n",
+    "# Robustly ensure huggingface_hub is available, install if missing\n",
+    "def _ensure_hf_hub():\n",
+    "    try:\n",
+    "        import huggingface_hub  # noqa: F401\n",
+    "    except Exception:\n",
+    "        print(\"Installing huggingface_hub...\")\n",
+    "        subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"huggingface_hub\", \"--quiet\"])\n",
+    "    # import the helpers into globals for downstream use\n",
+    "    global snapshot_download, hf_hub_download\n",
+    "    from huggingface_hub import snapshot_download, hf_hub_download\n",
+    "\n",
+    "_ensure_hf_hub()\n",
+    "\n",
+    "# Dataset local path (use Colab path if detected)\n",
     "DATASET_ROOT = Path(\"/content/data\") if USE_COLAB else Path(\"prepared\") / \"CASIA2\"\n",
     "DATASET_ROOT.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "HF_REPO_ID = \"juhenes/lifd\"\n",
     "HF_REVISION = os.environ.get(\"HF_DATA_REVISION\", \"main\")\n",
-    "HF_TOKEN = userdata.get(\"HUGGINGFACE_TOKEN\") if userdata is not None else os.environ.get(\"HUGGINGFACE_TOKEN\")\n",
+    "# Prefer interactive Colab userdata token then env var\n",
+    "try:\n",
+    "    HF_TOKEN = userdata.get(\"HUGGINGFACE_TOKEN\") if userdata is not None else os.environ.get(\"HUGGINGFACE_TOKEN\")\n",
+    "except Exception:\n",
+    "    HF_TOKEN = os.environ.get(\"HUGGINGFACE_TOKEN\")\n",
     "MANIFEST_FILENAME = \"manifest.parquet\"\n",
     "\n",
     "def _locate_manifest_root(base: Path):\n",
-    "    candidates = [base, base / \"CASIA2\"]\n",
+    "    candidates = [base]\n",
     "    for candidate in candidates:\n",
     "        manifest_path = candidate / MANIFEST_FILENAME\n",
     "        if manifest_path.exists():\n",
@@ -233,23 +252,32 @@
     "    return _locate_manifest_root(root) is not None\n",
     "\n",
     "def ensure_dataset_ready(force_sync: bool = False) -> Path:\n",
+    "    # If a local prepared dataset already exists, prefer it unless force_sync=True\n",
     "    if not force_sync:\n",
     "        local_root = _locate_manifest_root(DATASET_ROOT)\n",
     "        if local_root is not None:\n",
+    "            print(f\"Using local prepared dataset at {local_root}\")\n",
     "            return local_root\n",
-    "    snapshot_dir = Path(snapshot_download(\n",
-    "        repo_id=HF_REPO_ID,\n",
-    "        revision=HF_REVISION,\n",
-    "        token=HF_TOKEN,\n",
-    "        repo_type=\"dataset\",\n",
-    "    ))\n",
-    "    resolved_snapshot = _locate_manifest_root(snapshot_dir)\n",
-    "    if resolved_snapshot is None:\n",
-    "        raise FileNotFoundError(\n",
-    "            f\"Downloaded dataset at {snapshot_dir} does not contain {MANIFEST_FILENAME}.\"\n",
-    "        )\n",
-    "    return resolved_snapshot\n",
     "\n",
+    "    # Otherwise attempt to download a snapshot of the HF dataset repo (repo_type='dataset')\n",
+    "    print(f\"Downloading dataset snapshot from HuggingFace: {HF_REPO_ID} (rev={HF_REVISION})\")\n",
+    "    try:\n",
+    "        snapshot_dir = Path(snapshot_download(repo_id=HF_REPO_ID, revision=HF_REVISION, token=HF_TOKEN, repo_type=\"dataset\"))\n",
+    "        resolved_snapshot = _locate_manifest_root(snapshot_dir)\n",
+    "        if resolved_snapshot is not None:\n",
+    "            return resolved_snapshot\n",
+    "    except Exception as e:\n",
+    "        print(\"snapshot_download failed or returned incomplete snapshot:\", e)\n",
+    "\n",
+    "    # Fallback: try to download just the manifest file into DATASET_ROOT\n",
+    "    try:\n",
+    "        manifest_local = Path(hf_hub_download(repo_id=HF_REPO_ID, filename=MANIFEST_FILENAME, revision=HF_REVISION, token=HF_TOKEN, repo_type=\"dataset\"))\n",
+    "        print(f\"Downloaded manifest to {manifest_local}\")\n",
+    "        return manifest_local.parent\n",
+    "    except Exception as exc:\n",
+    "        raise FileNotFoundError(f\"Could not locate or download {MANIFEST_FILENAME} from {HF_REPO_ID}: {exc}\")\n",
+    "\n",
+    "# Resolve dataset root and ensure manifest exists\n",
     "DATASET_ROOT = ensure_dataset_ready()"
    ]
   },
@@ -342,8 +370,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "combined_manifest = Path(DATASET_ROOT) / \"combined_manifest.parquet\",\n",
+    "if combined_manifest.exists():\n",
+    "    PREPARED_ROOT = str(combined_manifest)\n",
+    "    print(f\"Using combined manifest for prepared_root: {PREPARED_ROOT}\")\n",
+    "else:\n",
+    "    PREPARED_ROOT = str(DATASET_ROOT)\n",
+    "    print(f\"Using DATASET_ROOT for prepared_root: {PREPARED_ROOT}\")\n",
+    "\n",
     "train_config = TrainConfig(\n",
-    "    prepared_root=str(DATASET_ROOT),\n",
+    "    prepared_root=PREPARED_ROOT,\n",
     "    train_split=\"train\",\n",
     "    val_split=\"val\",\n",
     "    target_size=384,\n",
