Add checkpoint loading tests and utility functions
- Introduced `test_checkpoint_load.py` to validate loading of checkpoints from the `checkpoints/` directory.
- Implemented `safe_load_state_dict_from_checkpoint` in `checkpoint_utils.py` to handle state_dict loading with prefix cleaning and diagnostics for missing/unexpected keys.
- Updated `training_launcher.ipynb` to include per-backbone learning rate and weight decay configurations for improved training flexibility.

--- a/training_launcher.ipynb
+++ b/training_launcher.ipynb
@@ -687,6 +687,9 @@
         "    PREPARED_ROOT = str(DATASET_ROOT)\n",
         "    print(f\"Using DATASET_ROOT for prepared_root: {PREPARED_ROOT}\")\n",
         "\n",
+        "# Per-backbone LR/WD overrides (edit as needed). Valid keys: 'efficientnet','swin','segformer','noise'\n",
+        "BACKBONE_LRS = {\"swin\": 1e-4, \"noise\": 5e-5}\n",
+        "BACKBONE_WDS = {\"swin\": 1e-2, \"noise\": 1e-3}\n",
         "train_config = TrainConfig(\n",
         "    prepared_root=PREPARED_ROOT,\n",
         "    train_split=\"train\",\n",
@@ -715,6 +718,8 @@
         "    primary_eval_threshold=0.5,\n",
         "    early_stopping_patience=6,\n",
         "    early_stopping_min_delta=5e-4,\n",
+        "    backbone_learning_rates=BACKBONE_LRS,\n",
+        "    backbone_weight_decays=BACKBONE_WDS,\n",
         ")"
       ]
     },
@@ -1145,6 +1150,9 @@
         "    PREPARED_ROOT = str(DATASET_ROOT)\n",
         "    print(f\"Using DATASET_ROOT for prepared_root: {PREPARED_ROOT}\")\n",
         "\n",
+        "# Per-backbone LR/WD overrides (edit as needed). Valid keys: 'efficientnet','swin','segformer','noise'\n",
+        "BACKBONE_LRS = {\"swin\": 1e-4, \"noise\": 5e-5}\n",
+        "BACKBONE_WDS = {\"swin\": 1e-2, \"noise\": 1e-3}\n",
         "train_config = TrainConfig(\n",
         "    prepared_root=PREPARED_ROOT,\n",
         "    train_split=\"train\",\n",
@@ -1174,6 +1182,8 @@
         "    primary_eval_threshold=0.5,\n",
         "    early_stopping_patience=6,\n",
         "    early_stopping_min_delta=5e-4,\n",
+        "    backbone_learning_rates=BACKBONE_LRS,\n",
+        "    backbone_weight_decays=BACKBONE_WDS,\n",
         ")"
       ]
     },
@@ -1264,7 +1274,8 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "lifd",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
